--- a/Glosario/package.json
+++ b/Glosario/package.json
@@ -18,6 +18,7 @@
   "cordovaPlugins": [
     "cordova-plugin-device",
     "cordova-plugin-console",
+    "cordova-plugin-inappbrowser",
     "cordova-plugin-whitelist",
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
